--- a/SophieXML/SophieXML/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/SophieXML/SophieXML/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     if (ViewData.TryGetValue("ParentLayout", out var parentLayout))
     {
-        Layout = (string)parentLayout;
+        @*Layout = (string)parentLayout;*@
+        Layout = "/Pages/Shared/_LayoutBase.cshtml";
     }
     else
     {
