--- a/SophieXML/SophieXML/Pages/Index.cshtml
+++ b/SophieXML/SophieXML/Pages/Index.cshtml
@@ -1,11 +1,22 @@
 ﻿@page
-@model IndexModel
+@model SophieXML.Pages.IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-left">
+    <h1>Công cụ hỗ trợ dịch vụ Bảo Hiểm</h1>
+    <h2>Chức năng:</h2>
+    <ul>
+        <li>
+            <p><strong>Đọc file XML:</strong> hỗ trợ đọc dữ liệu trên tập tin .xml từ bảo hiểm</p>
+        </li>
+        <li>
+            <p><strong>Thống kê:</strong> tính toán các dữ liệu cần thiết để hiển thị các biểu đồ</p>
+        </li>
+        <li>
+            <p><strong>Xuất bản:</strong> trích xuất tập tin Excel dữ liệu thống kê</p>
+        </li>
+    </ul>
 </div>
 
