--- a/SophieXML/SophieXML/Pages/Privacy.cshtml
+++ b/SophieXML/SophieXML/Pages/Privacy.cshtml
@@ -1,9 +1,175 @@
 ﻿@page
-@model PrivacyModel
+@model SophieXML.Pages.PrivacyModel
 @{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
+@*<h1>@ViewData["Title"]</h1>*@
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h1>Chính sách bảo mật</h1>
+<p>Cập nhật lần cuối: ngày 9 tháng 9 năm 2022</p>
+<p>Chính sách Bảo mật này mô tả các chính sách và thủ tục của Chúng tôi về việc thu thập, sử dụng và tiết lộ thông tin của Bạn khi Bạn sử dụng Dịch vụ và cho Bạn biết về các quyền riêng tư của Bạn và cách luật pháp bảo vệ Bạn.</p>
+<p>Chúng tôi sử dụng dữ liệu Cá nhân của Bạn để cung cấp và cải thiện Dịch vụ. Bằng việc sử dụng Dịch vụ, Bạn đồng ý với việc thu thập và sử dụng thông tin theo Chính sách Bảo mật này. Chính sách Bảo mật này đã được tạo với sự trợ giúp của <a href="https://www.termsfeed.com/privacy-policy-generator/" target="_blank">Trình tạo Chính sách Bảo mật Điều khoản</a>.</ p>
+<h1>Giải thích và Định nghĩa</h1>
+<h2>Phiên dịch</h2>
+<p>Những từ có chữ cái đầu tiên được viết hoa có nghĩa được xác định trong các điều kiện sau. Các định nghĩa sau đây sẽ có cùng ý nghĩa bất kể chúng xuất hiện ở số ít hay số nhiều.</p>
+<h2>Định nghĩa</h2>
+<p>Vì mục đích của Chính sách Bảo mật này:</p>
+<ul>
+   <li>
+       <p><strong>Tài khoản</strong> có nghĩa là một tài khoản duy nhất được tạo để Bạn truy cập Dịch vụ của chúng tôi hoặc các phần của Dịch vụ của chúng tôi.</p>
+   </li>
+   <li>
+       <p><strong>Công ty</strong> (được gọi là &quot;Công ty&quot;, &quot;Sophie&quot;, &quot;Chúng tôi&quot; trong Thỏa thuận này) đề cập đến Sophie.</p>
+   </li>
+   <li>
+       <p><strong>Cookie</strong> là các tệp nhỏ được trang web đặt trên máy tính, thiết bị di động hoặc bất kỳ thiết bị nào khác của Bạn, chứa thông tin chi tiết về lịch sử duyệt web của Bạn trên trang web đó trong số nhiều mục đích sử dụng.</p>
+   </li>
+   <li>
+       <p><strong>Quốc gia</strong> đề cập đến: Việt Nam</p>
+   </li>
+   <li>
+       <p><strong>Thiết bị</strong> có nghĩa là bất kỳ thiết bị nào có thể truy cập Dịch vụ, chẳng hạn như máy tính, điện thoại di động hoặc máy tính bảng kỹ thuật số.</p>
+   </li>
+   <li>
+       <p><strong>Dữ liệu Cá nhân</strong> là bất kỳ thông tin nào liên quan đến một cá nhân được xác định hoặc có thể nhận dạng được.</p>
+   </li>
+   <li>
+       <p><strong>Dịch vụ</strong> đề cập đến Trang web.</p>
+   </li>
+   <li>
+       <p><strong>Nhà cung cấp dịch vụ</strong> có nghĩa là bất kỳ thể nhân hoặc pháp nhân nào xử lý dữ liệu thay mặt cho Công ty. Nó đề cập đến các công ty bên thứ ba hoặc các cá nhân được Công ty thuê để hỗ trợ Dịch vụ, cung cấp Dịch vụ thay mặt Công ty, thực hiện các dịch vụ liên quan đến Dịch vụ hoặc hỗ trợ Công ty phân tích cách Dịch vụ được sử dụng.</ p>
+   </li>
+   <li>
+       <p><strong>Dữ liệu sử dụng</strong> đề cập đến dữ liệu được thu thập tự động, được tạo ra bởi việc sử dụng Dịch vụ hoặc từ chính cơ sở hạ tầng Dịch vụ (ví dụ: thời lượng của một lượt truy cập trang).</p>
+   </li>
+   <li>
+       <p><strong>Trang web</strong> đề cập đến Sophie, có thể truy cập từ <a href="http://tools.1sophie.com" rel="external nofollow noopener" target="_blank">http://tools.1sophie.com</a></p>
+   </li>
+   <li>
+       <p><strong>Bạn</strong> có nghĩa là cá nhân truy cập hoặc sử dụng Dịch vụ, hoặc công ty hoặc pháp nhân khác thay mặt cho cá nhân đó đang truy cập hoặc sử dụng Dịch vụ, nếu có.</p>
+   </li>
+</ul>
+<h1>Thu thập và Sử dụng Dữ liệu Cá nhân của Bạn</h1>
+<h2>Các loại dữ liệu được thu thập</h2>
+<h3>Dữ liệu Cá nhân</h3>
+<p>Trong khi sử dụng Dịch vụ của Chúng tôi, Chúng tôi có thể yêu cầu Bạn cung cấp cho Chúng tôi một số thông tin nhận dạng cá nhân nhất định có thể được sử dụng để liên hệ hoặc nhận dạng Bạn. Thông tin nhận dạng cá nhân có thể bao gồm, nhưng không giới hạn ở:</p>
+<ul>
+   <li>
+       <p>Địa chỉ email</p>
+   </li>
+   <li>
+       <p>Dữ liệu sử dụng</p>
+   </li>
+</ul>
+<h3>Dữ liệu sử dụng</h3>
+<p>Dữ liệu sử dụng được thu thập tự động khi sử dụng Dịch vụ.</p>
+<p>Dữ liệu Sử dụng có thể bao gồm thông tin như địa chỉ Giao thức Internet của Thiết bị của Bạn (ví dụ: địa chỉ IP), loại trình duyệt, phiên bản trình duyệt, các trang Dịch vụ của chúng tôi mà Bạn truy cập, ngày giờ Bạn truy cập, thời gian dành cho các trang đó , số nhận dạng thiết bị duy nhất và dữ liệu chẩn đoán khác.</p>
+<p>Khi Bạn truy cập Dịch vụ bằng hoặc thông qua thiết bị di động, Chúng tôi có thể tự động thu thập một số thông tin nhất định, bao gồm nhưng không giới hạn ở loại thiết bị di động Bạn sử dụng, ID duy nhất trên thiết bị di động của Bạn, địa chỉ IP của thiết bị di động của Bạn , Hệ điều hành di động của bạn, loại trình duyệt Internet di động Bạn sử dụng, số nhận dạng thiết bị duy nhất và dữ liệu chẩn đoán khác.</p>
+<p>Chúng tôi cũng có thể thu thập thông tin mà trình duyệt của Bạn gửi bất cứ khi nào Bạn truy cập Dịch vụ của chúng tôi hoặc khi Bạn truy cập Dịch vụ bằng hoặc thông qua thiết bị di động.</p>
+<h3>Công nghệ và Cookie Theo dõi</h3>
+<p>Chúng tôi sử dụng Cookie và các công nghệ theo dõi tương tự để theo dõi hoạt động trên Dịch vụ của chúng tôi và lưu trữ một số thông tin nhất định. Các công nghệ theo dõi được sử dụng là báo hiệu, thẻ và tập lệnh để thu thập và theo dõi thông tin cũng như để cải thiện và phân tích Dịch vụ của chúng tôi. Các công nghệ Chúng tôi sử dụng có thể bao gồm:</p>
+<ul>
+   <li><strong>Cookie hoặc Cookie Trình duyệt</strong> Cookie là một tệp nhỏ được đặt trên Thiết bị của Bạn. Bạn có thể hướng dẫn trình duyệt của mình từ chối tất cả Cookie hoặc cho biết khi nào Cookie được gửi đi. Tuy nhiên, nếu Bạn không chấp nhận Cookie, Bạn có thể không sử dụng được một số phần của Dịch vụ của chúng tôi. Trừ khi bạn đã điều chỉnh cài đặt trình duyệt của mình để nó từ chối Cookie, Dịch vụ của chúng tôi có thể sử dụng Cookie.</li>
+   <li><strong>Flash Cookie</strong> Một số tính năng nhất định của Dịch vụ của chúng tôi có thể sử dụng các đối tượng được lưu trữ cục bộ (hoặc Flash Cookie) để thu thập và lưu trữ thông tin về các tùy chọn của Bạn hoặc hoạt động của Bạn trên Dịch vụ của chúng tôi. Cookie Flash không được quản lý bởi cài đặt trình duyệt giống như cài đặt được sử dụng cho Cookie trình duyệt. Để biết thêm thông tin về cách Bạn có thể xóa Flash Cookie, vui lòng đọc &quot;Tôi có thể thay đổi cài đặt để tắt hoặc xóa các đối tượng được chia sẻ cục bộ ở đâu? &quot;có sẵn tại <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_</a></li>
+   <li><strong>Báo hiệu web</strong> Một số phần nhất định trong Dịch vụ của chúng tôi và email của chúng tôi có thể chứa các tệp điện tử nhỏ được gọi là báo hiệu web (còn được gọi là gif rõ ràng, thẻ pixel và gif pixel đơn) cho phép Ví dụ: công ty tính những người dùng đã truy cập các trang đó hoặc mở email và các số liệu thống kê trang web liên quan khác (ví dụ: ghi lại mức độ phổ biến của một phần nhất định và xác minh tính toàn vẹn của hệ thống và máy chủ).</li>
+</ul>
+<p>Cookie có thể &quot;Liên tục &quot;hoặc &quot;Phiên &quot;Bánh quy. Cookie liên tục vẫn còn trên máy tính cá nhân hoặc thiết bị di động của Bạn khi Bạn ngoại tuyến, trong khi Cookie Phiên sẽ bị xóa ngay khi Bạn đóng trình duyệt web của mình. Bạn có thể tìm hiểu thêm về cookie trên bài viết <a href="https://www.termsfeed.com/blog/cookies/#What_Are_Cookies" target="_blank">trang web Điều khoản</a>.</p>
+<p>Chúng tôi sử dụng cả Cookie phiên và Cookie liên tục cho các mục đích được nêu dưới đây:</p>
+<ul>
+   <li>
+       <p><strong>Cookie Cần thiết / Cần thiết</strong></p>
+       <p>Loại: Cookie phiên</p>
+       <p>Được quản lý bởi: Chúng tôi</p>
+       <p>Mục đích: Những Cookie này cần thiết để cung cấp cho Bạn các dịch vụ có sẵn thông qua Trang web và cho phép Bạn sử dụng một số tính năng của nó. Chúng giúp xác thực người dùng và ngăn chặn việc sử dụng gian lận tài khoản người dùng. Nếu không có các Cookie này, các dịch vụ mà Bạn đã yêu cầu sẽ không thể được cung cấp và Chúng tôi chỉ sử dụng các Cookie này để cung cấp cho Bạn các dịch vụ đó.</p>
+   </li>
+   <li>
+       <p><strong>Chính sách cookie / Cookie chấp nhận thông báo</strong></p>
+       <p>Loại: Cookie liên tục</p>
+       <p>Được quản lý bởi: Chúng tôi</p>
+       <p>Mục đích: Những Cookie này xác định xem người dùng có chấp nhận việc sử dụng cookie trên Trang web hay không.</p>
+   </li>
+   <li>
+       <p><strong>Cookie chức năng</strong></p>
+       <p>Loại: Cookie liên tục</p>
+       <p>Được quản lý bởi: Chúng tôi</p>
+       <p>Mục đích: Những Cookie này cho phép chúng tôi ghi nhớ các lựa chọn Bạn thực hiện khi Bạn sử dụng Trang web, chẳng hạn như ghi nhớ chi tiết đăng nhập hoặc tùy chọn ngôn ngữ của bạn. Mục đích của những Cookie này là cung cấp cho Bạn trải nghiệm cá nhân hơn và tránh việc Bạn phải nhập lại các tùy chọn của mình mỗi khi Bạn sử dụng Trang web.</p>
+   </li>
+</ul>
+<p>Để biết thêm thông tin về cookie chúng tôi sử dụng và các lựa chọn của bạn về cookie, vui lòng truy cập Chính sách cookie của chúng tôi hoặc phần Cookie trong Chính sách quyền riêng tư của chúng tôi.</p>
+<h2>Sử dụng Dữ liệu Cá nhân của Bạn</h2>
+<p>Công ty có thể sử dụng Dữ liệu Cá nhân cho các mục đích sau:</p>
+<ul>
+   <li>
+       <p><strong>Để cung cấp và duy trì Dịch vụ của chúng tôi</strong>, bao gồm cả việc giám sát việc sử dụng Dịch vụ của chúng tôi.</p>
+   </li>
+   <li>
+       <p><strong>Để quản lý Tài khoản của bạn:</strong> để quản lý đăng ký của Bạn với tư cách là người dùng Dịch vụ. Dữ liệu Cá nhân Bạn cung cấp có thể cho Bạn quyền truy cập vào các chức năng khác nhau của Dịch vụ khả dụng cho Bạn với tư cách là người dùng đã đăng ký.</p>
+   </li>
+   <li>
+       <p><strong>Để thực hiện hợp đồng:</strong> sự phát triển, tuân thủ và cam kết của hợp đồng mua bán các sản phẩm, mặt hàng hoặc dịch vụ Bạn đã mua hoặc bất kỳ hợp đồng nào khác với Chúng tôi thông qua Dịch vụ.</ p>
+   </li>
+   <li>
+       <p><strong>Để liên hệ với Bạn:</strong> để liên hệ với Bạn qua email, cuộc gọi điện thoại, SMS hoặc các hình thức liên lạc điện tử tương đương khác, chẳng hạn như thông báo đẩy của ứng dụng di động về các bản cập nhật hoặc thông tin liên lạc liên quan đến các chức năng, các sản phẩm hoặc dịch vụ đã ký hợp đồng, bao gồm cả các bản cập nhật bảo mật, khi cần thiết hoặc hợp lý để triển khai chúng.</p>
+   </li>
+   <li>
+       <p><strong>Để cung cấp cho Bạn:</strong> tin tức, ưu đãi đặc biệt và thông tin chung về hàng hóa, dịch vụ và sự kiện khác mà chúng tôi cung cấp tương tự như những hàng hóa, dịch vụ và sự kiện mà bạn đã mua hoặc đã hỏi trừ khi Bạn đã chọn không tham gia nhận thông tin như vậy.</p>
+   </li>
+   <li>
+       <p><strong>Để quản lý các yêu cầu của Bạn:</strong> để tham dự và quản lý các yêu cầu của Bạn với Chúng tôi.</p>
+   </li>
+   <li>
+       <p><strong>Đối với việc chuyển giao doanh nghiệp:</strong> chúng tôi có thể sử dụng thông tin của Bạn để đánh giá hoặc tiến hành sáp nhập, chia tách, tái cơ cấu, tổ chức lại, giải thể hoặc bán hoặc chuyển nhượng một số hoặc tất cả tài sản của Chúng tôi, cho dù đang lo ngại hoặc là một phần của thủ tục phá sản, thanh lý hoặc tương tự, trong đó Dữ liệu cá nhân do Chúng tôi nắm giữ về người dùng Dịch vụ của chúng tôi nằm trong số các tài sản được chuyển giao.</p>
+   </li>
+   <li>
+       <p><strong>Cho các mục đích khác:</strong> chúng tôi có thể sử dụng thông tin của Bạn cho các mục đích khác, chẳng hạn như phân tích dữ liệu, xác định xu hướng sử dụng, xác định hiệu quả của các chiến dịch khuyến mại và để đánh giá và cải thiện Dịch vụ, sản phẩm, dịch vụ của chúng tôi , tiếp thị và trải nghiệm của bạn.</p>
+   </li>
+</ul>
+<p>Chúng tôi có thể chia sẻ thông tin cá nhân của Bạn trong các trường hợp sau:</p>
+<ul>
+   <li><strong>Với Nhà cung cấp dịch vụ:</strong> Chúng tôi có thể chia sẻ thông tin cá nhân của Bạn với Nhà cung cấp dịch vụ để theo dõi và phân tích việc sử dụng Dịch vụ của chúng tôi, để liên hệ với Bạn.</li>
+   <li><strong>Đối với việc chuyển giao doanh nghiệp:</strong> Chúng tôi có thể chia sẻ hoặc chuyển giao thông tin cá nhân của Bạn liên quan đến hoặc trong quá trình đàm phán, bất kỳ sự hợp nhất, bán tài sản của Công ty, tài trợ hoặc mua lại tất cả hoặc một phần của Chúng tôi kinh doanh cho một công ty khác.</li>
+   <li><strong>Với các Chi nhánh:</strong> Chúng tôi có thể chia sẻ thông tin của Bạn với các chi nhánh của Chúng tôi, trong trường hợp đó, chúng tôi sẽ yêu cầu các chi nhánh đó tuân theo Chính sách Bảo mật này. Các đơn vị liên kết bao gồm công ty mẹ của Chúng tôi và bất kỳ công ty con nào khác, đối tác liên doanh hoặc các công ty khác mà Chúng tôi kiểm soát hoặc nằm dưới sự kiểm soát chung của Chúng tôi.</li>
+   <li><strong>Với các đối tác kinh doanh:</strong> Chúng tôi có thể chia sẻ thông tin của Bạn với các đối tác kinh doanh của Chúng tôi để cung cấp cho Bạn các sản phẩm, dịch vụ hoặc chương trình khuyến mãi nhất định.</li>
+   <li><strong>Với người dùng khác:</strong> Khi Bạn chia sẻ thông tin cá nhân hoặc tương tác ở các khu vực công cộng với những người dùng khác, tất cả người dùng có thể xem thông tin đó và có thể bị phân phối công khai ra bên ngoài.</li>
+   <li><strong>Với sự đồng ý của Bạn:</strong> Chúng tôi có thể tiết lộ thông tin cá nhân của Bạn cho bất kỳ mục đích nào khác với sự đồng ý của Bạn.</li>
+</ul>
+<h2>Lưu giữ Dữ liệu Cá nhân của Bạn</h2>
+<p>Công ty sẽ chỉ lưu giữ Dữ liệu Cá nhân của Bạn chừng nào cần thiết cho các mục đích được nêu trong Chính sách Bảo mật này. Chúng tôi sẽ lưu giữ và sử dụng Dữ liệu Cá nhân của Bạn trong phạm vi cần thiết để tuân thủ các nghĩa vụ pháp lý của chúng tôi (ví dụ: nếu chúng tôi được yêu cầu giữ lại dữ liệu của bạn để tuân thủ luật hiện hành), giải quyết tranh chấp và thực thi các thỏa thuận và chính sách pháp lý của chúng tôi.</ p>
+<p>Công ty cũng sẽ giữ lại Dữ liệu sử dụng cho các mục đích phân tích nội bộ. Dữ liệu sử dụng thường được lưu giữ trong một khoảng thời gian ngắn hơn, ngoại trừ khi dữ liệu này được sử dụng để tăng cường bảo mật hoặc để cải thiện chức năng của Dịch vụ của chúng tôi hoặc Chúng tôi có nghĩa vụ pháp lý phải lưu giữ dữ liệu này trong khoảng thời gian dài hơn.</p>
+<h2>Chuyển dữ liệu cá nhân của bạn</h2>
+<p>Thông tin của bạn, bao gồm cả Dữ liệu Cá nhân, được xử lý tại các văn phòng điều hành của Công ty và ở bất kỳ nơi nào khác có trụ sở của các bên liên quan đến việc xử lý. Điều đó có nghĩa là thông tin này có thể được chuyển đến - và duy trì trên các máy tính nằm bên ngoài tiểu bang, tỉnh, quốc gia của Bạn hoặc khu vực tài phán khác của chính phủ, nơi các luật bảo vệ dữ liệu có thể khác với các luật trong khu vực tài phán của Bạn.</p>
+<p>Sự đồng ý của Bạn đối với Chính sách Bảo mật này, sau đó là việc Bạn gửi thông tin đó thể hiện sự đồng ý của Bạn đối với việc chuyển giao đó.</p>
+<p>Công ty sẽ thực hiện tất cả các bước cần thiết một cách hợp lý để đảm bảo rằng dữ liệu của Bạn được xử lý an toàn và tuân theo Chính sách Bảo mật này và sẽ không có việc chuyển Dữ liệu Cá nhân của Bạn cho một tổ chức hoặc một quốc gia trừ khi có các biện pháp kiểm soát thích hợp bao gồm bảo mật dữ liệu của Bạn và thông tin cá nhân khác.</p>
+<h2>Tiết lộ Dữ liệu Cá nhân của Bạn</h2>
+<h3>Giao dịch kinh doanh</h3>
+<p>Nếu Công ty tham gia vào việc sáp nhập, mua lại hoặc bán tài sản, Dữ liệu Cá nhân của Bạn có thể được chuyển giao. Chúng tôi sẽ cung cấp thông báo trước khi Dữ liệu Cá nhân của Bạn được chuyển giao và trở thành đối tượng của Chính sách Bảo mật khác.</p>
+<h3>Thực thi pháp luật</h3>
+<p>Trong một số trường hợp nhất định, Công ty có thể được yêu cầu tiết lộ Dữ liệu Cá nhân của Bạn nếu luật pháp yêu cầu làm như vậy hoặc theo yêu cầu hợp lệ của cơ quan công quyền (ví dụ: tòa án hoặc cơ quan chính phủ).</p>
+<h3>Các yêu cầu pháp lý khác</h3>
+<p>Công ty có thể tiết lộ Dữ liệu Cá nhân của Bạn với thiện chí tin rằng hành động đó là cần thiết để:</p>
+<ul>
+   <li>Tuân thủ nghĩa vụ pháp lý</li>
+   <li>Bảo vệ và bảo vệ các quyền hoặc tài sản của Công ty</li>
+   <li>Ngăn chặn hoặc điều tra hành vi sai trái có thể xảy ra liên quan đến Dịch vụ</li>
+   <li>Bảo vệ sự an toàn cá nhân của Người dùng Dịch vụ hoặc công chúng</li>
+   <li>Bảo vệ khỏi trách nhiệm pháp lý</li>
+</ul>
+<h2>Bảo mật Dữ liệu Cá nhân của Bạn</h2>
+<p>Việc bảo mật Dữ liệu Cá nhân của Bạn là quan trọng đối với Chúng tôi, nhưng hãy nhớ rằng không có phương pháp truyền qua Internet hoặc phương pháp lưu trữ điện tử nào là an toàn 100%. Mặc dù Chúng tôi cố gắng sử dụng các phương tiện được chấp nhận về mặt thương mại để bảo vệ Dữ liệu Cá nhân của Bạn, nhưng Chúng tôi không thể đảm bảo tính bảo mật tuyệt đối của Dữ liệu đó.</p>
+<h1>Quyền riêng tư của trẻ em</h1>
+<p>Dịch vụ của chúng tôi không giải quyết bất kỳ ai dưới 13 tuổi. Chúng tôi không cố ý thu thập thông tin nhận dạng cá nhân từ bất kỳ ai dưới 13 tuổi. Nếu Bạn là cha mẹ hoặc người giám hộ và Bạn biết rằng con Bạn đã cung cấp Thông tin cá nhân cho Chúng tôi Dữ liệu, vui lòng liên hệ với chúng tôi. Nếu Chúng tôi biết rằng Chúng tôi đã thu thập Dữ liệu Cá nhân từ bất kỳ ai dưới 13 tuổi mà không có sự xác minh của sự đồng ý của cha mẹ, Chúng tôi sẽ thực hiện các bước để xóa thông tin đó khỏi máy chủ của Chúng tôi.</p>
+<p>Nếu Chúng tôi cần dựa trên sự đồng ý làm cơ sở pháp lý để xử lý thông tin của Bạn và Quốc gia của Bạn yêu cầu sự đồng ý của cha mẹ, Chúng tôi có thể yêu cầu sự đồng ý của cha mẹ Bạn trước khi Chúng tôi thu thập và sử dụng thông tin đó.</p>
+<h1>Liên kết đến các trang web khác</h1>
+<p>Dịch vụ của Chúng tôi có thể chứa các liên kết đến các trang web khác không do Chúng tôi điều hành. Nếu Bạn nhấp vào liên kết của bên thứ ba, Bạn sẽ được dẫn đến trang web của bên thứ ba đó. Chúng tôi đặc biệt khuyên Bạn nên xem lại Chính sách Bảo mật của mọi trang web Bạn truy cập.</p>
+<p>Chúng tôi không kiểm soát và không chịu trách nhiệm về nội dung, chính sách bảo mật hoặc thông lệ của bất kỳ trang web hoặc dịch vụ nào của bên thứ ba.</p>
+<h1>Các thay đổi đối với Chính sách Bảo mật này</h1>
+<p>Chúng tôi có thể cập nhật Chính sách Bảo mật của mình theo thời gian. Chúng tôi sẽ thông báo cho Bạn về bất kỳ thay đổi nào bằng cách đăng Chính sách Bảo mật mới trên trang này.</p>
+<p>Chúng tôi sẽ cho Bạn biết qua email và / hoặc một thông báo nổi bật về Dịch vụ của Chúng tôi, trước khi thay đổi có hiệu lực và cập nhật &quot;Cập nhật lần cuối &quot;ngày ở đầu Chính sách Bảo mật này.</p>
+<p>Bạn nên xem lại Chính sách Bảo mật này định kỳ để biết bất kỳ thay đổi nào. Các thay đổi đối với Chính sách quyền riêng tư này có hiệu lực khi chúng được đăng trên trang này.</p>
+<h1>Liên hệ với chúng tôi</h1>
+<p>Nếu bạn có bất kỳ câu hỏi nào về Chính sách Bảo mật này, Bạn có thể liên hệ với chúng tôi:</p>
+<ul>
+    <li>Theo số điện thoại: 0389955141</li>
+    <li>Theo email: dstranquocthang@gmail.com</li>
+</ul>
 
