--- a/SophieXML/SophieXML/Areas/Identity/Pages/_ViewStart.cshtml
+++ b/SophieXML/SophieXML/Areas/Identity/Pages/_ViewStart.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
-    Layout = "/Pages/Shared/_Layout.cshtml";
+    @*Layout = "/Pages/Shared/_Layout.cshtml";*@
+    Layout = "/Pages/Shared/_LayoutBase.cshtml";
 }
 
